hyperdata_8_3_4/nginx_deploy_8.3.4hotpatch_private/ingress-hd.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hd-ingress
  namespace: @NAMESPACE
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 1024m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "@PROXY_TIMEOUT"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "@PROXY_TIMEOUT"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "@PROXY_TIMEOUT"
spec:
  tls:
    - secretName: istio.@NAMESPACE-nginx-ingress-nginx
  rules:
   -  http:
       paths:
       - path: /hyperdata8/dataobjects/(.*)/download(/|$)(.*)
         backend:
           serviceName: @TARGET_VIRTUAL_SVC_NAME
           servicePort: 8500
   -  http:
       paths:
       - path: /hyperdata8/(.*)
         backend:
           serviceName: @TARGET_SVC_NAME
           servicePort: 8080
   -  http:
        paths:
        - path: /hyperdata(/|$)(.*)
          backend:
            serviceName: @TARGET_SVC_NAME
            servicePort: 8080
